<resources>
    <string name="app_name">weidushangcheng</string>
    <string name="reg_edit_acc">手机号</string>
    <string name="reg_edit_verify">验证码</string>
    <string name="reg_edit_pwd">登录密码</string>
    <string name="reg_text_getverify">获取验证码</string>
    <string name="reg_text_login">已有账户?立即登录</string>
    <string name="reg_btn_reg">注册</string>
    <string name="login_edit_acc">手机号</string>
    <string name="login_edit_pwd">登录密码</string>
    <string name="login_text_reg">快速注册</string>
    <string name="login_checkbox_remember">记住密码</string>
    <string name="login_btn_login">登录</string>
</resources>
